# vk-renderer

./: .gitignore  CMakeLists.txt  Makefile
cpp/: main.cpp  vulkan-utils.cpp
headers/: main.hpp  vulkan-utils.hpp
shaders/: compile-shaders.sh  singleTriangle.vert
src/: main.cpp  main.hpp
